--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "algo-root",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://surajbhatt03.github.io/algo-root-frontend-assignment",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
